--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "real_portfolio",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+      "node": "13.9.0",
+      "npm": "6.14.5"
+  }
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
